go_analyzer/core/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BREAK
    CONTINUE
    ELSE
    FALLTHROUGH
    IF
    INTERFACE
    MAP
    RANGE
    STRUCT
    TYPE

Grammar

Rule 0     S' -> program
Rule 1     program -> package_declaration multiple_import global_sequence
Rule 2     package_declaration -> PACKAGE IDENTIFIER optional_semicolon
Rule 3     multiple_import -> multiple_import simple_import
Rule 4     multiple_import -> empty
Rule 5     simple_import -> IMPORT STRING optional_semicolon
Rule 6     empty -> <empty>
Rule 7     optional_semicolon -> SEMICOLON
Rule 8     optional_semicolon -> empty
Rule 9     global_sequence -> global_sequence global_statement
Rule 10    global_sequence -> global_statement
Rule 11    global_sequence -> empty
Rule 12    global_statement -> statement optional_semicolon
Rule 13    global_statement -> function_declaration
Rule 14    block -> LBRACE statement_sequence RBRACE
Rule 15    statement -> assignment
Rule 16    statement -> assignment_compound
Rule 17    statement -> variable_declaration
Rule 18    statement -> expression
Rule 19    statement -> return_statement
Rule 20    statement -> for_statement
Rule 21    statement -> switch_statement
Rule 22    for_statement -> FOR expression block
Rule 23    for_statement -> FOR block
Rule 24    for_statement -> FOR for_clause block
Rule 25    for_clause -> assignment optional_semicolon expression optional_semicolon expression
Rule 26    for_clause -> optional_semicolon expression optional_semicolon expression
Rule 27    return_statement -> RETURN
Rule 28    return_statement -> RETURN return_list
Rule 29    return_list -> return_list COMMA expression
Rule 30    return_list -> expression
Rule 31    statement_sequence -> statement_sequence statement optional_semicolon
Rule 32    statement_sequence -> statement optional_semicolon
Rule 33    statement_sequence -> empty
Rule 34    function_declaration -> FUNC IDENTIFIER LPAREN parameter_list RPAREN return_type block
Rule 35    parameter_list -> parameter_list COMMA parameter
Rule 36    parameter_list -> parameter
Rule 37    parameter_list -> empty
Rule 38    parameter -> IDENTIFIER type
Rule 39    parameter -> IDENTIFIER ELLIPSIS primitive_type
Rule 40    return_type -> type
Rule 41    return_type -> LPAREN type_list RPAREN
Rule 42    return_type -> empty
Rule 43    type_list -> type_list COMMA type
Rule 44    type_list -> type
Rule 45    assignment -> IDENTIFIER ASSIGN expression
Rule 46    assignment -> IDENTIFIER SHORT_ASSIGN expression
Rule 47    assignment_compound -> IDENTIFIER PLUS_ASSIGN expression
Rule 48    assignment_compound -> IDENTIFIER MINUS_ASSIGN expression
Rule 49    assignment_compound -> IDENTIFIER MULT_ASSIGN expression
Rule 50    assignment_compound -> IDENTIFIER DIV_ASSIGN expression
Rule 51    assignment_compound -> IDENTIFIER MOD_ASSIGN expression
Rule 52    assignment_compound -> IDENTIFIER AND_ASSIGN expression
Rule 53    assignment_compound -> IDENTIFIER OR_ASSIGN expression
Rule 54    assignment_compound -> IDENTIFIER XOR_ASSIGN expression
Rule 55    assignment_compound -> IDENTIFIER LSHIFT_ASSIGN expression
Rule 56    assignment_compound -> IDENTIFIER RSHIFT_ASSIGN expression
Rule 57    variable_declaration -> VAR IDENTIFIER type ASSIGN expression
Rule 58    variable_declaration -> CONST IDENTIFIER type ASSIGN expression
Rule 59    variable_declaration -> VAR IDENTIFIER ASSIGN expression
Rule 60    variable_declaration -> CONST IDENTIFIER ASSIGN expression
Rule 61    type -> primitive_type
Rule 62    type -> slice_type
Rule 63    type -> array_type
Rule 64    primitive_type -> INT_TYPE
Rule 65    primitive_type -> FLOAT64_TYPE
Rule 66    primitive_type -> STRING_TYPE
Rule 67    primitive_type -> BOOL_TYPE
Rule 68    slice_type -> LBRACKET RBRACKET primitive_type
Rule 69    expression -> expression PLUS expression
Rule 70    expression -> expression MINUS expression
Rule 71    expression -> expression TIMES expression
Rule 72    expression -> expression DIVIDE expression
Rule 73    expression -> expression MODULE expression
Rule 74    expression -> expression EQ expression
Rule 75    expression -> expression NEQ expression
Rule 76    expression -> expression LT expression
Rule 77    expression -> expression LE expression
Rule 78    expression -> expression GT expression
Rule 79    expression -> expression GE expression
Rule 80    expression -> expression LAND expression
Rule 81    expression -> expression LOR expression
Rule 82    expression -> expression AND expression
Rule 83    expression -> expression OR expression
Rule 84    expression -> expression XOR expression
Rule 85    expression -> expression AND_NOT expression
Rule 86    expression -> expression LSHIFT expression
Rule 87    expression -> expression RSHIFT expression
Rule 88    expression -> PLUS expression
Rule 89    expression -> MINUS expression
Rule 90    expression -> LNOT expression
Rule 91    expression -> LBRACKET RBRACKET primitive_type LBRACE expression_list RBRACE
Rule 92    expression -> LBRACKET RBRACKET primitive_type LBRACE RBRACE
Rule 93    expression -> LPAREN expression RPAREN
Rule 94    expression -> INT
Rule 95    expression -> FLOAT64
Rule 96    expression -> TRUE
Rule 97    expression -> FALSE
Rule 98    expression -> IDENTIFIER
Rule 99    expression -> STRING
Rule 100   expression -> IDENTIFIER PLUSPLUS
Rule 101   expression -> IDENTIFIER MINUSMINUS
Rule 102   expression_list -> expression_list COMMA expression
Rule 103   expression_list -> expression
Rule 104   case_clauses -> case_clause case_clauses
Rule 105   case_clauses -> empty
Rule 106   case_clause -> CASE expression_list COLON statement_sequence
Rule 107   case_clause -> DEFAULT COLON statement_sequence
Rule 108   switch_init -> assignment SEMICOLON
Rule 109   switch_init -> empty
Rule 110   switch_expression -> expression
Rule 111   switch_expression -> empty
Rule 112   switch_statement -> SWITCH switch_init switch_expression LBRACE case_clauses RBRACE
Rule 113   array_type -> LBRACKET expression RBRACKET type
Rule 114   expression -> expression ELLIPSIS
Rule 115   expression -> expression DOT IDENTIFIER
Rule 116   argument_list -> expression_list
Rule 117   argument_list -> empty
Rule 118   expression -> expression LPAREN argument_list RPAREN

Terminals, with rules where they appear

AND                  : 82
AND_ASSIGN           : 52
AND_NOT              : 85
ASSIGN               : 45 57 58 59 60
BOOL_TYPE            : 67
BREAK                : 
CASE                 : 106
COLON                : 106 107
COMMA                : 29 35 43 102
CONST                : 58 60
CONTINUE             : 
DEFAULT              : 107
DIVIDE               : 72
DIV_ASSIGN           : 50
DOT                  : 115
ELLIPSIS             : 39 114
ELSE                 : 
EQ                   : 74
FALLTHROUGH          : 
FALSE                : 97
FLOAT64              : 95
FLOAT64_TYPE         : 65
FOR                  : 22 23 24
FUNC                 : 34
GE                   : 79
GT                   : 78
IDENTIFIER           : 2 34 38 39 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 98 100 101 115
IF                   : 
IMPORT               : 5
INT                  : 94
INTERFACE            : 
INT_TYPE             : 64
LAND                 : 80
LBRACE               : 14 91 92 112
LBRACKET             : 68 91 92 113
LE                   : 77
LNOT                 : 90
LOR                  : 81
LPAREN               : 34 41 93 118
LSHIFT               : 86
LSHIFT_ASSIGN        : 55
LT                   : 76
MAP                  : 
MINUS                : 70 89
MINUSMINUS           : 101
MINUS_ASSIGN         : 48
MODULE               : 73
MOD_ASSIGN           : 51
MULT_ASSIGN          : 49
NEQ                  : 75
OR                   : 83
OR_ASSIGN            : 53
PACKAGE              : 2
PLUS                 : 69 88
PLUSPLUS             : 100
PLUS_ASSIGN          : 47
RANGE                : 
RBRACE               : 14 91 92 112
RBRACKET             : 68 91 92 113
RETURN               : 27 28
RPAREN               : 34 41 93 118
RSHIFT               : 87
RSHIFT_ASSIGN        : 56
SEMICOLON            : 7 108
SHORT_ASSIGN         : 46
STRING               : 5 99
STRING_TYPE          : 66
STRUCT               : 
SWITCH               : 112
TIMES                : 71
TRUE                 : 96
TYPE                 : 
VAR                  : 57 59
XOR                  : 84
XOR_ASSIGN           : 54
error                : 

Nonterminals, with rules where they appear

argument_list        : 118
array_type           : 63
assignment           : 15 25 108
assignment_compound  : 16
block                : 22 23 24 34
case_clause          : 104
case_clauses         : 104 112
empty                : 4 8 11 33 37 42 105 109 111 117
expression           : 18 22 25 25 26 26 29 30 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88 89 90 93 102 103 110 113 114 115 118
expression_list      : 91 102 106 116
for_clause           : 24
for_statement        : 20
function_declaration : 13
global_sequence      : 1 9
global_statement     : 9 10
multiple_import      : 1 3
optional_semicolon   : 2 5 12 25 25 26 26 31 32
package_declaration  : 1
parameter            : 35 36
parameter_list       : 34 35
primitive_type       : 39 61 68 91 92
program              : 0
return_list          : 28 29
return_statement     : 19
return_type          : 34
simple_import        : 3
slice_type           : 62
statement            : 12 31 32
statement_sequence   : 14 31 106 107
switch_expression    : 112
switch_init          : 112
switch_statement     : 21
type                 : 38 40 43 44 57 58 113
type_list            : 41 43
variable_declaration : 17

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . package_declaration multiple_import global_sequence
    (2) package_declaration -> . PACKAGE IDENTIFIER optional_semicolon

    PACKAGE         shift and go to state 3

    program                        shift and go to state 1
    package_declaration            shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> package_declaration . multiple_import global_sequence
    (3) multiple_import -> . multiple_import simple_import
    (4) multiple_import -> . empty
    (6) empty -> .

    IMPORT          reduce using rule 6 (empty -> .)
    FUNC            reduce using rule 6 (empty -> .)
    IDENTIFIER      reduce using rule 6 (empty -> .)
    VAR             reduce using rule 6 (empty -> .)
    CONST           reduce using rule 6 (empty -> .)
    PLUS            reduce using rule 6 (empty -> .)
    MINUS           reduce using rule 6 (empty -> .)
    LNOT            reduce using rule 6 (empty -> .)
    LBRACKET        reduce using rule 6 (empty -> .)
    LPAREN          reduce using rule 6 (empty -> .)
    INT             reduce using rule 6 (empty -> .)
    FLOAT64         reduce using rule 6 (empty -> .)
    TRUE            reduce using rule 6 (empty -> .)
    FALSE           reduce using rule 6 (empty -> .)
    STRING          reduce using rule 6 (empty -> .)
    RETURN          reduce using rule 6 (empty -> .)
    FOR             reduce using rule 6 (empty -> .)
    SWITCH          reduce using rule 6 (empty -> .)
    $end            reduce using rule 6 (empty -> .)

    multiple_import                shift and go to state 4
    empty                          shift and go to state 5

state 3

    (2) package_declaration -> PACKAGE . IDENTIFIER optional_semicolon

    IDENTIFIER      shift and go to state 6


state 4

    (1) program -> package_declaration multiple_import . global_sequence
    (3) multiple_import -> multiple_import . simple_import
    (9) global_sequence -> . global_sequence global_statement
    (10) global_sequence -> . global_statement
    (11) global_sequence -> . empty
    (5) simple_import -> . IMPORT STRING optional_semicolon
    (12) global_statement -> . statement optional_semicolon
    (13) global_statement -> . function_declaration
    (6) empty -> .
    (15) statement -> . assignment
    (16) statement -> . assignment_compound
    (17) statement -> . variable_declaration
    (18) statement -> . expression
    (19) statement -> . return_statement
    (20) statement -> . for_statement
    (21) statement -> . switch_statement
    (34) function_declaration -> . FUNC IDENTIFIER LPAREN parameter_list RPAREN return_type block
    (45) assignment -> . IDENTIFIER ASSIGN expression
    (46) assignment -> . IDENTIFIER SHORT_ASSIGN expression
    (47) assignment_compound -> . IDENTIFIER PLUS_ASSIGN expression
    (48) assignment_compound -> . IDENTIFIER MINUS_ASSIGN expression
    (49) assignment_compound -> . IDENTIFIER MULT_ASSIGN expression
    (50) assignment_compound -> . IDENTIFIER DIV_ASSIGN expression
    (51) assignment_compound -> . IDENTIFIER MOD_ASSIGN expression
    (52) assignment_compound -> . IDENTIFIER AND_ASSIGN expression
    (53) assignment_compound -> . IDENTIFIER OR_ASSIGN expression
    (54) assignment_compound -> . IDENTIFIER XOR_ASSIGN expression
    (55) assignment_compound -> . IDENTIFIER LSHIFT_ASSIGN expression
    (56) assignment_compound -> . IDENTIFIER RSHIFT_ASSIGN expression
    (57) variable_declaration -> . VAR IDENTIFIER type ASSIGN expression
    (58) variable_declaration -> . CONST IDENTIFIER type ASSIGN expression
    (59) variable_declaration -> . VAR IDENTIFIER ASSIGN expression
    (60) variable_declaration -> . CONST IDENTIFIER ASSIGN expression
    (69) expression -> . expression PLUS expression
    (70) expression -> . expression MINUS expression
    (71) expression -> . expression TIMES expression
    (72) expression -> . expression DIVIDE expression
    (73) expression -> . expression MODULE expression
    (74) expression -> . expression EQ expression
    (75) expression -> . expression NEQ expression
    (76) expression -> . expression LT expression
    (77) expression -> . expression LE expression
    (78) expression -> . expression GT expression
    (79) expression -> . expression GE expression
    (80) expression -> . expression LAND expression
    (81) expression -> . expression LOR expression
    (82) expression -> . expression AND expression
    (83) expression -> . expression OR expression
    (84) expression -> . expression XOR expression
    (85) expression -> . expression AND_NOT expression
    (86) expression -> . expression LSHIFT expression
    (87) expression -> . expression RSHIFT expression
    (88) expression -> . PLUS expression
    (89) expression -> . MINUS expression
    (90) expression -> . LNOT expression
    (91) expression -> . LBRACKET RBRACKET primitive_type LBRACE expression_list RBRACE
    (92) expression -> . LBRACKET RBRACKET primitive_type LBRACE RBRACE
    (93) expression -> . LPAREN expression RPAREN
    (94) expression -> . INT
    (95) expression -> . FLOAT64
    (96) expression -> . TRUE
    (97) expression -> . FALSE
    (98) expression -> . IDENTIFIER
    (99) expression -> . STRING
    (100) expression -> . IDENTIFIER PLUSPLUS
    (101) expression -> . IDENTIFIER MINUSMINUS
    (114) expression -> . expression ELLIPSIS
    (115) expression -> . expression DOT IDENTIFIER
    (118) expression -> . expression LPAREN argument_list RPAREN
    (27) return_statement -> . RETURN
    (28) return_statement -> . RETURN return_list
    (22) for_statement -> . FOR expression block
    (23) for_statement -> . FOR block
    (24) for_statement -> . FOR for_clause block
    (112) switch_statement -> . SWITCH switch_init switch_expression LBRACE case_clauses RBRACE

  ! shift/reduce conflict for FUNC resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for CONST resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for LNOT resolved as shift
  ! shift/reduce conflict for LBRACKET resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT64 resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
    IMPORT          shift and go to state 11
    $end            reduce using rule 6 (empty -> .)
    FUNC            shift and go to state 22
    IDENTIFIER      shift and go to state 23
    VAR             shift and go to state 25
    CONST           shift and go to state 26
    PLUS            shift and go to state 27
    MINUS           shift and go to state 28
    LNOT            shift and go to state 29
    LBRACKET        shift and go to state 30
    LPAREN          shift and go to state 24
    INT             shift and go to state 31
    FLOAT64         shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    STRING          shift and go to state 12
    RETURN          shift and go to state 35
    FOR             shift and go to state 36
    SWITCH          shift and go to state 37

  ! FUNC            [ reduce using rule 6 (empty -> .) ]
  ! IDENTIFIER      [ reduce using rule 6 (empty -> .) ]
  ! VAR             [ reduce using rule 6 (empty -> .) ]
  ! CONST           [ reduce using rule 6 (empty -> .) ]
  ! PLUS            [ reduce using rule 6 (empty -> .) ]
  ! MINUS           [ reduce using rule 6 (empty -> .) ]
  ! LNOT            [ reduce using rule 6 (empty -> .) ]
  ! LBRACKET        [ reduce using rule 6 (empty -> .) ]
  ! LPAREN          [ reduce using rule 6 (empty -> .) ]
  ! INT             [ reduce using rule 6 (empty -> .) ]
  ! FLOAT64         [ reduce using rule 6 (empty -> .) ]
  ! TRUE            [ reduce using rule 6 (empty -> .) ]
  ! FALSE           [ reduce using rule 6 (empty -> .) ]
  ! STRING          [ reduce using rule 6 (empty -> .) ]
  ! RETURN          [ reduce using rule 6 (empty -> .) ]
  ! FOR             [ reduce using rule 6 (empty -> .) ]
  ! SWITCH          [ reduce using rule 6 (empty -> .) ]

    global_sequence                shift and go to state 7
    simple_import                  shift and go to state 8
    global_statement               shift and go to state 9
    empty                          shift and go to state 10
    statement                      shift and go to state 13
    function_declaration           shift and go to state 14
    assignment                     shift and go to state 15
    assignment_compound            shift and go to state 16
    variable_declaration           shift and go to state 17
    expression                     shift and go to state 18
    return_statement               shift and go to state 19
    for_statement                  shift and go to state 20
    switch_statement               shift and go to state 21

state 5

    (4) multiple_import -> empty .

    IMPORT          reduce using rule 4 (multiple_import -> empty .)
    FUNC            reduce using rule 4 (multiple_import -> empty .)
    IDENTIFIER      reduce using rule 4 (multiple_import -> empty .)
    VAR             reduce using rule 4 (multiple_import -> empty .)
    CONST           reduce using rule 4 (multiple_import -> empty .)
    PLUS            reduce using rule 4 (multiple_import -> empty .)
    MINUS           reduce using rule 4 (multiple_import -> empty .)
    LNOT            reduce using rule 4 (multiple_import -> empty .)
    LBRACKET        reduce using rule 4 (multiple_import -> empty .)
    LPAREN          reduce using rule 4 (multiple_import -> empty .)
    INT             reduce using rule 4 (multiple_import -> empty .)
    FLOAT64         reduce using rule 4 (multiple_import -> empty .)
    TRUE            reduce using rule 4 (multiple_import -> empty .)
    FALSE           reduce using rule 4 (multiple_import -> empty .)
    STRING          reduce using rule 4 (multiple_import -> empty .)
    RETURN          reduce using rule 4 (multiple_import -> empty .)
    FOR             reduce using rule 4 (multiple_import -> empty .)
    SWITCH          reduce using rule 4 (multiple_import -> empty .)
    $end            reduce using rule 4 (multiple_import -> empty .)


state 6

    (2) package_declaration -> PACKAGE IDENTIFIER . optional_semicolon
    (7) optional_semicolon -> . SEMICOLON
    (8) optional_semicolon -> . empty
    (6) empty -> .

    SEMICOLON       shift and go to state 39
    IMPORT          reduce using rule 6 (empty -> .)
    FUNC            reduce using rule 6 (empty -> .)
    IDENTIFIER      reduce using rule 6 (empty -> .)
    VAR             reduce using rule 6 (empty -> .)
    CONST           reduce using rule 6 (empty -> .)
    PLUS            reduce using rule 6 (empty -> .)
    MINUS           reduce using rule 6 (empty -> .)
    LNOT            reduce using rule 6 (empty -> .)
    LBRACKET        reduce using rule 6 (empty -> .)
    LPAREN          reduce using rule 6 (empty -> .)
    INT             reduce using rule 6 (empty -> .)
    FLOAT64         reduce using rule 6 (empty -> .)
    TRUE            reduce using rule 6 (empty -> .)
    FALSE           reduce using rule 6 (empty -> .)
    STRING          reduce using rule 6 (empty -> .)
    RETURN          reduce using rule 6 (empty -> .)
    FOR             reduce using rule 6 (empty -> .)
    SWITCH          reduce using rule 6 (empty -> .)
    $end            reduce using rule 6 (empty -> .)

    optional_semicolon             shift and go to state 38
    empty                          shift and go to state 40

state 7

    (1) program -> package_declaration multiple_import global_sequence .
    (9) global_sequence -> global_sequence . global_statement
    (12) global_statement -> . statement optional_semicolon
    (13) global_statement -> . function_declaration
    (15) statement -> . assignment
    (16) statement -> . assignment_compound
    (17) statement -> . variable_declaration
    (18) statement -> . expression
    (19) statement -> . return_statement
    (20) statement -> . for_statement
    (21) statement -> . switch_statement
    (34) function_declaration -> . FUNC IDENTIFIER LPAREN parameter_list RPAREN return_type block
    (45) assignment -> . IDENTIFIER ASSIGN expression
    (46) assignment -> . IDENTIFIER SHORT_ASSIGN expression
    (47) assignment_compound -> . IDENTIFIER PLUS_ASSIGN expression
    (48) assignment_compound -> . IDENTIFIER MINUS_ASSIGN expression
    (49) assignment_compound -> . IDENTIFIER MULT_ASSIGN expression
    (50) assignment_compound -> . IDENTIFIER DIV_ASSIGN expression
    (51) assignment_compound -> . IDENTIFIER MOD_ASSIGN expression
    (52) assignment_compound -> . IDENTIFIER AND_ASSIGN expression
    (53) assignment_compound -> . IDENTIFIER OR_ASSIGN expression
    (54) assignment_compound -> . IDENTIFIER XOR_ASSIGN expression
    (55) assignment_compound -> . IDENTIFIER LSHIFT_ASSIGN expression
    (56) assignment_compound -> . IDENTIFIER RSHIFT_ASSIGN expression
    (57) variable_declaration -> . VAR IDENTIFIER type ASSIGN expression
    (58) variable_declaration -> . CONST IDENTIFIER type ASSIGN expression
    (59) variable_declaration -> . VAR IDENTIFIER ASSIGN expression
    (60) variable_declaration -> . CONST IDENTIFIER ASSIGN expression
    (69) expression -> . expression PLUS expression
    (70) expression -> . expression MINUS expression
    (71) expression -> . expression TIMES expression
    (72) expression -> . expression DIVIDE expression
    (73) expression -> . expression MODULE expression
    (74) expression -> . expression EQ expression
    (75) expression -> . expression NEQ expression
    (76) expression -> . expression LT expression
    (77) expression -> . expression LE expression
    (78) expression -> . expression GT expression
    (79) expression -> . expression GE expression
    (80) expression -> . expression LAND expression
    (81) expression -> . expression LOR expression
    (82) expression -> . expression AND expression
    (83) expression -> . expression OR expression
    (84) expression -> . expression XOR expression
    (85) expression -> . expression AND_NOT expression
    (86) expression -> . expression LSHIFT expression
    (87) expression -> . expression RSHIFT expression
    (88) expression -> . PLUS expression
    (89) expression -> . MINUS expression
    (90) expression -> . LNOT expression
    (91) expression -> . LBRACKET RBRACKET primitive_type LBRACE expression_list RBRACE
    (92) expression -> . LBRACKET RBRACKET primitive_type LBRACE RBRACE
    (93) expression -> . LPAREN expression RPAREN
    (94) expression -> . INT
    (95) expression -> . FLOAT64
    (96) expression -> . TRUE
    (97) expression -> . FALSE
    (98) expression -> . IDENTIFIER
    (99) expression -> . STRING
    (100) expression -> . IDENTIFIER PLUSPLUS
    (101) expression -> . IDENTIFIER MINUSMINUS
    (114) expression -> . expression ELLIPSIS
    (115) expression -> . expression DOT IDENTIFIER
    (118) expression -> . expression LPAREN argument_list RPAREN
    (27) return_statement -> . RETURN
    (28) return_statement -> . RETURN return_list
    (22) for_statement -> . FOR expression block
    (23) for_statement -> . FOR block
    (24) for_statement -> . FOR for_clause block
    (112) switch_statement -> . SWITCH switch_init switch_expression LBRACE case_clauses RBRACE

    $end            reduce using rule 1 (program -> package_declaration multiple_import global_sequence .)
    FUNC            shift and go to state 22
    IDENTIFIER      shift and go to state 23
    VAR             shift and go to state 25
    CONST           shift and go to state 26
    PLUS            shift and go to state 27
    MINUS           shift and go to state 28
    LNOT            shift and go to state 29
    LBRACKET        shift and go to state 30
    LPAREN          shift and go to state 24
    INT             shift and go to state 31
    FLOAT64         shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    STRING          shift and go to state 12
    RETURN          shift and go to state 35
    FOR             shift and go to state 36
    SWITCH          shift and go to state 37

    global_statement               shift and go to state 41
    statement                      shift and go to state 13
    function_declaration           shift and go to state 14
    assignment                     shift and go to state 15
    assignment_compound            shift and go to state 16
    variable_declaration           shift and go to state 17
    expression                     shift and go to state 18
    return_statement               shift and go to state 19
    for_statement                  shift and go to state 20
    switch_statement               shift and go to state 21

state 8

    (3) multiple_import -> multiple_import simple_import .

    IMPORT          reduce using rule 3 (multiple_import -> multiple_import simple_import .)
    FUNC            reduce using rule 3 (multiple_import -> multiple_import simple_import .)
    IDENTIFIER      reduce using rule 3 (multiple_import -> multiple_import simple_import .)
    VAR             reduce using rule 3 (multiple_import -> multiple_import simple_import .)
    CONST           reduce using rule 3 (multiple_import -> multiple_import simple_import .)
    PLUS            reduce using rule 3 (multiple_import -> multiple_import simple_import .)
    MINUS           reduce using rule 3 (multiple_import -> multiple_import simple_import .)
    LNOT            reduce using rule 3 (multiple_import -> multiple_import simple_import .)
    LBRACKET        reduce using rule 3 (multiple_import -> multiple_import simple_import .)
    LPAREN          reduce using rule 3 (multiple_import -> multiple_import simple_import .)
    INT             reduce using rule 3 (multiple_import -> multiple_import simple_import .)
    FLOAT64         reduce using rule 3 (multiple_import -> multiple_import simple_import .)
    TRUE            reduce using rule 3 (multiple_import -> multiple_import simple_import .)
    FALSE           reduce using rule 3 (multiple_import -> multiple_import simple_import .)
    STRING          reduce using rule 3 (multiple_import -> multiple_import simple_import .)
    RETURN          reduce using rule 3 (multiple_import -> multiple_import simple_import .)
    FOR             reduce using rule 3 (multiple_import -> multiple_import simple_import .)
    SWITCH          reduce using rule 3 (multiple_import -> multiple_import simple_import .)
    $end            reduce using rule 3 (multiple_import -> multiple_import simple_import .)


state 9

    (10) global_sequence -> global_statement .

    FUNC            reduce using rule 10 (global_sequence -> global_statement .)
    IDENTIFIER      reduce using rule 10 (global_sequence -> global_statement .)
    VAR             reduce using rule 10 (global_sequence -> global_statement .)
    CONST           reduce using rule 10 (global_sequence -> global_statement .)
    PLUS            reduce using rule 10 (global_sequence -> global_statement .)
    MINUS           reduce using rule 10 (global_sequence -> global_statement .)
    LNOT            reduce using rule 10 (global_sequence -> global_statement .)
    LBRACKET        reduce using rule 10 (global_sequence -> global_statement .)
    LPAREN          reduce using rule 10 (global_sequence -> global_statement .)
    INT             reduce using rule 10 (global_sequence -> global_statement .)
    FLOAT64         reduce using rule 10 (global_sequence -> global_statement .)
    TRUE            reduce using rule 10 (global_sequence -> global_statement .)
    FALSE           reduce using rule 10 (global_sequence -> global_statement .)
    STRING          reduce using rule 10 (global_sequence -> global_statement .)
    RETURN          reduce using rule 10 (global_sequence -> global_statement .)
    FOR             reduce using rule 10 (global_sequence -> global_statement .)
    SWITCH          reduce using rule 10 (global_sequence -> global_statement .)
    $end            reduce using rule 10 (global_sequence -> global_statement .)


state 10

    (11) global_sequence -> empty .

    FUNC            reduce using rule 11 (global_sequence -> empty .)
    IDENTIFIER      reduce using rule 11 (global_sequence -> empty .)
    VAR             reduce using rule 11 (global_sequence -> empty .)
    CONST           reduce using rule 11 (global_sequence -> empty .)
    PLUS            reduce using rule 11 (global_sequence -> empty .)
    MINUS           reduce using rule 11 (global_sequence -> empty .)
    LNOT            reduce using rule 11 (global_sequence -> empty .)
    LBRACKET        reduce using rule 11 (global_sequence -> empty .)
    LPAREN          reduce using rule 11 (global_sequence -> empty .)
    INT             reduce using rule 11 (global_sequence -> empty .)
    FLOAT64         reduce using rule 11 (global_sequence -> empty .)
    TRUE            reduce using rule 11 (global_sequence -> empty .)
    FALSE           reduce using rule 11 (global_sequence -> empty .)
    STRING          reduce using rule 11 (global_sequence -> empty .)
    RETURN          reduce using rule 11 (global_sequence -> empty .)
    FOR             reduce using rule 11 (global_sequence -> empty .)
    SWITCH          reduce using rule 11 (global_sequence -> empty .)
    $end            reduce using rule 11 (global_sequence -> empty .)


state 11

    (5) simple_import -> IMPORT . STRING optional_semicolon

    STRING          shift and go to state 42


state 12

    (99) expression -> STRING .

    PLUS            reduce using rule 99 (expression -> STRING .)
    MINUS           reduce using rule 99 (expression -> STRING .)
    TIMES           reduce using rule 99 (expression -> STRING .)
    DIVIDE          reduce using rule 99 (expression -> STRING .)
    MODULE          reduce using rule 99 (expression -> STRING .)
    EQ              reduce using rule 99 (expression -> STRING .)
    NEQ             reduce using rule 99 (expression -> STRING .)
    LT              reduce using rule 99 (expression -> STRING .)
    LE              reduce using rule 99 (expression -> STRING .)
    GT              reduce using rule 99 (expression -> STRING .)
    GE              reduce using rule 99 (expression -> STRING .)
    LAND            reduce using rule 99 (expression -> STRING .)
    LOR             reduce using rule 99 (expression -> STRING .)
    AND             reduce using rule 99 (expression -> STRING .)
    OR              reduce using rule 99 (expression -> STRING .)
    XOR             reduce using rule 99 (expression -> STRING .)
    AND_NOT         reduce using rule 99 (expression -> STRING .)
    LSHIFT          reduce using rule 99 (expression -> STRING .)
    RSHIFT          reduce using rule 99 (expression -> STRING .)
    ELLIPSIS        reduce using rule 99 (expression -> STRING .)
    DOT             reduce using rule 99 (expression -> STRING .)
    LPAREN          reduce using rule 99 (expression -> STRING .)
    SEMICOLON       reduce using rule 99 (expression -> STRING .)
    FUNC            reduce using rule 99 (expression -> STRING .)
    IDENTIFIER      reduce using rule 99 (expression -> STRING .)
    VAR             reduce using rule 99 (expression -> STRING .)
    CONST           reduce using rule 99 (expression -> STRING .)
    LNOT            reduce using rule 99 (expression -> STRING .)
    LBRACKET        reduce using rule 99 (expression -> STRING .)
    INT             reduce using rule 99 (expression -> STRING .)
    FLOAT64         reduce using rule 99 (expression -> STRING .)
    TRUE            reduce using rule 99 (expression -> STRING .)
    FALSE           reduce using rule 99 (expression -> STRING .)
    STRING          reduce using rule 99 (expression -> STRING .)
    RETURN          reduce using rule 99 (expression -> STRING .)
    FOR             reduce using rule 99 (expression -> STRING .)
    SWITCH          reduce using rule 99 (expression -> STRING .)
    $end            reduce using rule 99 (expression -> STRING .)
    RPAREN          reduce using rule 99 (expression -> STRING .)
    COMMA           reduce using rule 99 (expression -> STRING .)
    RBRACE          reduce using rule 99 (expression -> STRING .)
    CASE            reduce using rule 99 (expression -> STRING .)
    DEFAULT         reduce using rule 99 (expression -> STRING .)
    LBRACE          reduce using rule 99 (expression -> STRING .)
    RBRACKET        reduce using rule 99 (expression -> STRING .)
    COLON           reduce using rule 99 (expression -> STRING .)


state 13

    (12) global_statement -> statement . optional_semicolon
    (7) optional_semicolon -> . SEMICOLON
    (8) optional_semicolon -> . empty
    (6) empty -> .

    SEMICOLON       shift and go to state 39
    FUNC            reduce using rule 6 (empty -> .)
    IDENTIFIER      reduce using rule 6 (empty -> .)
    VAR             reduce using rule 6 (empty -> .)
    CONST           reduce using rule 6 (empty -> .)
    PLUS            reduce using rule 6 (empty -> .)
    MINUS           reduce using rule 6 (empty -> .)
    LNOT            reduce using rule 6 (empty -> .)
    LBRACKET        reduce using rule 6 (empty -> .)
    LPAREN          reduce using rule 6 (empty -> .)
    INT             reduce using rule 6 (empty -> .)
    FLOAT64         reduce using rule 6 (empty -> .)
    TRUE            reduce using rule 6 (empty -> .)
    FALSE           reduce using rule 6 (empty -> .)
    STRING          reduce using rule 6 (empty -> .)
    RETURN          reduce using rule 6 (empty -> .)
    FOR             reduce using rule 6 (empty -> .)
    SWITCH          reduce using rule 6 (empty -> .)
    $end            reduce using rule 6 (empty -> .)

    optional_semicolon             shift and go to state 43
    empty                          shift and go to state 40

state 14

    (13) global_statement -> function_declaration .
